added support for hierarchies from different modules